Corrected first screenshot

--- a/obs/2021-10-24.md
+++ b/obs/2021-10-24.md
@@ -53,7 +53,8 @@ Assuming the data is a SIGPROC filterbank file.
 
 Did several experiments with time option. `-time 10` (`rfifind -time 10 -o attempt1_time10 mm.fil`) resulted in most of the samples being rejected (red = periodic radio interefence):
 
-![2021-10-24-rfifind](https://user-images.githubusercontent.com/663576/142742178-9ee0a228-70ca-4246-957a-19a9438c4f8b.jpg)
+![attempt1](https://user-images.githubusercontent.com/663576/142742375-257fd2f7-1d0d-477c-b19c-1bdc9b027ecf.png)
+
 
 This also resulted in almost all (over 99%) of intervals being considered bad.
 
